@@ -11,20 +11,35 @@ SECTIONS
 {
   ${RELOCATING+. = ${PAGESIZE};}
 
+  /* RW initialized data.  */
   \$DATA\$ ALIGN (${PAGESIZE}) : {
     *(\$DATA\$)
-    *(\$LINK\$)
   }
+  /* RW data unmodified (zero-initialized).  */
   \$BSS\$ ALIGN (${PAGESIZE}) : {
     *(\$BSS\$)
   }
+  /* RO, executable code.  */
   \$CODE\$ ALIGN (${PAGESIZE}) : {
     *(\$CODE\$)
   }
+  /* RO initialized data.  */
   \$LITERAL\$ ALIGN (${PAGESIZE}) : {
+    *(\$LINK\$)
     *(\$LITERAL\$)
     *(\$READONLY\$)
     *(\$READONLY_ADDR\$)
+    *(eh_frame)
+    *(jcr)
+    *(ctors)
+    *(dtors)
+    *(gcc_except_table)
+
+    /* LIB$INITIALIZE stuff.  */
+    *(LIB\$INITIALIZDZ)	/* Start marker.  */
+    *(LIB\$INITIALIZD_)	/* Hi priority.  */
+    *(LIB\$INITIALIZE)	/* User.  */
+    *(LIB\$INITIALIZE$)	/* End marker.  */
   }
 
   \$DST\$ 0 : {
