@@ -1,3 +1,11 @@
+2010-06-01  Tristan Gingold  <gingold@adacore.com>
+
+	* vms-alpha.c (struct vms_private_data_struct): Add
+	transfer_address field.  Remove unused dst_info field.
+	(alpha_vms_write_exec): Use transfer_address.
+	(_bfd_vms_write_egsd): Add a comment about LIB$INITIALIZE.
+	(alpha_vms_bfd_final_link): Set transfer_address.
+
 2010-05-31  Tristan Gingold  <gingold@adacore.com>
 
 	* vms-lib.c (credat_lo, credat_hi): New fields.
